<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpPage">

    <ImageView
        android:id="@+id/img_rect_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/background_rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/img_fondo_signup_page"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/background_home"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/txt_signup_page"
        android:layout_width="328dp"
        android:layout_height="82dp"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/fuente_alkewallet"
        android:gravity="start"
        android:text="@string/singup_text_view"
        android:textColor="@color/color_off"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scroll_signup_page"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="25dp"
        app:layout_constraintTop_toBottomOf="@id/txt_signup_page"
        app:layout_constraintBottom_toTopOf="@id/lay_botones_signup_page"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <LinearLayout
            android:id="@+id/lay_datos_signup_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_nombre_signup_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/singup_margen"
                android:fontFamily="@font/fuente_alkewallet"
                android:text="@string/singup_nombre"
                android:textColor="@color/color_off" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:textColorHint="@color/color_off">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_ingreso_nombre_signup_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/singup_margen"
                    android:layout_weight="1"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/singup_ingrese_nombre" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_apellido_signup_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/singup_margen"
                android:fontFamily="@font/fuente_alkewallet"
                android:text="@string/singup_apellido"
                android:textColor="@color/color_off" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:textColorHint="@color/color_off">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_ingreso_apellido_signup_page"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/singup_margen"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/singup_ingrese_apellido" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_email_signup_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/singup_margen"
                android:fontFamily="@font/fuente_alkewallet"
                android:text="@string/singup_email"
                android:textColor="@color/color_off" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:backgroundTint="@color/color_off"
                android:textColorHint="@color/color_off">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_ingreso_email_signup_page"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/singup_margen"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/singup_ingrese_email" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_contrasena_signup_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/singup_margen"
                android:fontFamily="@font/fuente_alkewallet"
                android:text="@string/singup_clave"
                android:textColor="@color/color_off" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/color_off"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_ingreso_contrasena_signup_page"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/singup_margen"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/singup_ingrese_clave" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/txt_confirmar_contrasena_signup_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/singup_margen"
                android:fontFamily="@font/fuente_alkewallet"
                android:text="@string/singup_reclave"
                android:textColor="@color/color_off" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/color_off"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txt_ingreso_confirmar_contrasena_signup_page"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="@dimen/singup_margen"
                    android:backgroundTint="@android:color/transparent"
                    android:hint="@string/singup_ingrese_reclave" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/lay_botones_signup_page"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_crear_cuenta_signup_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_botones"
            android:fontFamily="@font/fuente_alkewallet"
            android:text="@string/singup_crear_cuenta" />

        <TextView
            android:id="@+id/btn_tienes_cuenta_signup_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/fuente_alkewallet"
            android:gravity="center|center_vertical"
            android:text="@string/login_singup_tienes_cuenta"
            android:textColor="@color/color_botones"
            android:textSize="15dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>