<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginPage">


    <ImageView
        android:id="@+id/img_rect_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/background_rectangle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/background_home" />

    <LinearLayout
        android:id="@+id/lay_txt_login_page"
        android:layout_width="350dp"
        android:layout_height="100dp"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txt_login_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/fuente_alkewallet"
            android:textColor="@color/color_off"
            android:textAlignment="viewStart"
            android:textSize="34sp"
            android:text="@string/login_text_view" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_email_login_page"
        android:layout_width="348dp"
        android:layout_height="82dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay_txt_login_page">

        <TextView
            android:id="@+id/txt_email_login_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/color_off"
            android:fontFamily="@font/fuente_alkewallet"
            android:text="@string/login_email" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/color_off"
            tools:ignore="ExtraText">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_email_input_login_page"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/ingrese_email" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_contrasena_login_page"
        android:layout_width="352dp"
        android:layout_height="104dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay_email_login_page">

        <TextView
            android:id="@+id/txt_contrasena_login_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fuente_alkewallet"
            android:text="@string/login_contrasena"
            android:textColor="@color/color_off" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/color_off"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_contrasena_input_login_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/transparent"
                android:hint="@string/ingrese_clave" />

            <TextView
                android:id="@+id/btn_olvide_contrasena_login_page"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:backgroundTint="@android:color/transparent"
                android:clickable="true"
                android:elevation="0dp"
                android:focusable="true"
                android:fontFamily="@font/fuente_alkewallet"
                android:gravity="end"
                android:text="@string/olvida_contrasena"
                android:textColor="@color/color_botones"
                android:layout_marginTop="10dp"
                android:textSize="15dp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lay_botones_ingreso_login_page"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lay_contrasena_login_page">

        <Button
            android:id="@+id/btn_inicio_sesion_login_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/color_botones"
            android:fontFamily="@font/fuente_alkewallet"
            android:text="@string/iniciar_sesion"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/btn_no_tienes_cuenta_login_page"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:backgroundTint="@android:color/transparent"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/fuente_alkewallet"
            android:gravity="center|center_vertical"
            android:text="@string/login_no_tienes_cuenta"
            android:textColor="@color/color_botones"
            android:textSize="15dp"

            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>